--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,6 +7,6 @@
 @import "components/top-cars";
 @import "components/features";
 @import "components/story";
-@import "components/homes";
+@import "components/cars";
 @import "components/gallery";
 @import "components/footer";
