--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Teko:wght@300;400;500;600;700&display=swap");
 *,
 *::before,
 *::after {
@@ -13,35 +14,200 @@ html {
 body {
   font-family: font-family;
   font-weight: 300;
-  color: #7887ab; }
+  color: #7887ab;
+  background-color: #162955; }
 
 .container {
   display: grid;
-  grid-template-rows: 80vh min-content 40vw repeat(3, min-content); }
+  grid-template-rows: 80vh min-content 40vw repeat(3, min-content);
+  grid-template-columns: [sidebar-start] 8rem [sidebar-end full-start] minmax(6rem, 1fr) [center-starts] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(6rem, 1fr) [full-end]; }
+
+.heading-4 {
+  font-size: 2rem;
+  font-family: "Teko", sans-serif;
+  font-weight: 600;
+  text-transform: uppercase;
+  color: #4f628e; }
+
+.heading-3 {
+  font-size: 1.5rem;
+  font-family: "Teko", sans-serif;
+  font-weight: 600;
+  text-transform: uppercase;
+  color: #4f628e; }
+
+.heading-2 {
+  font-size: 3.5rem;
+  font-family: "Teko", sans-serif;
+  font-weight: 600;
+  text-transform: uppercase;
+  color: #4f628e; }
+
+.btn-primary {
+  margin-top: 3rem;
+  font-size: 2rem;
+  padding: 1rem 1.5rem;
+  font-family: "Teko", sans-serif;
+  font-weight: 600;
+  text-transform: uppercase;
+  color: #4f628e;
+  background-color: #162955;
+  border: solid 0.01rem #4f628e;
+  transition: ease-in-out all 0.5s;
+  cursor: pointer; }
+
+.btn-primary:hover {
+  background-color: #4f628e;
+  color: #162955;
+  box-shadow: 0.5rem 0.1rem 2rem 1rem #7887ab; }
+
+.btn-primary:focus {
+  outline: none;
+  transform: scale(1); }
 
 .sidebar {
-  background-color: yellow; }
+  background-color: yellow;
+  grid-column: sidebar-start / sidebar-end;
+  grid-row: 1 / -1; }
 
 .header {
-  background-color: red; }
+  background-color: red;
+  grid-column: full-start / col-end 6; }
 
 .top-cars {
-  background-color: green; }
+  background-color: green;
+  grid-column: col-end 6 / full-end; }
 
 .features {
-  background-color: orange; }
+  margin: 15rem 0;
+  grid-column: center-starts / center-end;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+  grid-gap: 6rem;
+  background-color: #162955;
+  align-items: start; }
+
+.feature {
+  display: grid;
+  grid-template-columns: min-content 1fr;
+  grid-gap: 1.5rem; }
+  .feature__icon {
+    font-size: 3rem;
+    color: #4f628e; }
+  .feature__text {
+    font-size: 1.8rem;
+    text-align: center;
+    grid-column: 1 /-1; }
 
 .story__pictures {
-  background-color: #0b58b1; }
+  background-image: linear-gradient(rgba(6, 21, 57, 0.2), rgba(6, 21, 57, 0.2)), url("../img/image3.jpg");
+  grid-column: full-start / col-end 4;
+  background-position: center;
+  background-size: cover;
+  display: grid;
+  grid-template-rows: repeat(6, 1fr);
+  grid-template-columns: repeat(6, 1fr);
+  align-items: center; }
+
+.story__img--1 {
+  width: 115%;
+  height: auto;
+  grid-row: 1 / 4;
+  grid-column: 3 / 7;
+  z-index: 2;
+  box-shadow: 0.5rem 0.1rem 2rem #7887ab;
+  transition: 0.5s ease-in-out; }
+
+.story__img--1:hover {
+  transform: scale(1.1);
+  z-index: 3; }
+
+.story__img--2 {
+  width: 115%;
+  height: auto;
+  grid-row: 4 / 6;
+  grid-column: 4 / 7;
+  z-index: 2;
+  box-shadow: 0.5rem 0.1rem 2rem #7887ab;
+  transition: 0.5s ease-in-out; }
+
+.story__img--2:hover {
+  transform: scale(1.1); }
 
 .story__content {
-  background-color: #660bb1; }
+  background-color: #061539;
+  grid-column: col-end 4 / full-end;
+  padding: 6rem 8vw;
+  /*display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;*/
+  display: grid;
+  align-content: center;
+  justify-items: start; }
 
-.homes {
-  background-color: #b1850b; }
+.story__text {
+  font-size: 1.8rem; }
+
+.cars {
+  background-color: #162955;
+  grid-column: center-starts / center-end;
+  margin: 15rem 0;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+  grid-gap: 7rem; }
+
+.car {
+  color: #162955;
+  background-color: #4f628e;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr); }
+  .car__img {
+    width: 100%;
+    grid-row: 1 /2;
+    grid-column: 1 / -1;
+    opacity: 0.5;
+    transition: ease-in-out 0.5s; }
+  .car__img:hover {
+    opacity: 1; }
+  .car__star {
+    grid-row: 1 /2;
+    grid-column: 2 /3;
+    color: #7887ab;
+    font-size: 2.5rem;
+    justify-self: end;
+    margin: 1rem;
+    transition: ease-in-out 0.5s; }
+  .car__star:hover {
+    color: yellow;
+    transform: scale(1.1); }
+  .car__name {
+    grid-column: 1 / -1;
+    font-size: 2rem;
+    color: #4f628e;
+    background-color: #162955;
+    margin: 0 2rem;
+    margin-top: -2rem;
+    margin-bottom: 1rem;
+    padding: 1rem 2rem;
+    justify-self: center;
+    z-index: 2; }
+  .car__details {
+    justify-self: start;
+    font-size: 1.5rem;
+    display: flex;
+    padding: 1rem; }
+    .car__details i {
+      padding-left: 2rem; }
+    .car__details p {
+      padding-left: 1rem; }
+  .car__btn {
+    grid-column: 1 / -1; }
 
 .gallery {
-  background-color: #ca11ab; }
+  background-color: #ca11ab;
+  grid-column: full-start / full-end; }
 
 .footer {
-  background-color: rgba(51, 221, 221, 0.63); }
+  background-color: rgba(51, 221, 221, 0.63);
+  grid-column: full-start / full-end; }
