--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap");
-
+@import url("https://fonts.googleapis.com/css2?family=Teko:wght@300;400;500;600;700&display=swap");
 //Variables
 $font-family: "Quicksand", sans-serif;
 $dark-font-color: #061539;
@@ -24,9 +24,63 @@ body {
   font-family: font-family;
   font-weight: 300;
   color: $light-text-color;
+  background-color: $medium-font-color;
 }
 
 .container {
   display: grid;
   grid-template-rows: 80vh min-content 40vw repeat(3, min-content); //row sizes
-  g
+  grid-template-columns:
+    [sidebar-start] 8rem [sidebar-end full-start] minmax(6rem, 1fr)
+    [center-starts] repeat(8, [col-start] minmax(min-content, 14rem) [col-end])
+    [center-end]
+    minmax(6rem, 1fr) [full-end];
+}
+
+// Typography
+
+.heading-4 {
+  font-size: 2rem;
+  font-family: "Teko", sans-serif;
+  font-weight: 600;
+  text-transform: uppercase;
+  color: $medium-text-color;
+}
+.heading-3 {
+  font-size: 1.5rem;
+  font-family: "Teko", sans-serif;
+  font-weight: 600;
+  text-transform: uppercase;
+  color: $medium-text-color;
+}
+.heading-2 {
+  font-size: 3.5rem;
+  font-family: "Teko", sans-serif;
+  font-weight: 600;
+  text-transform: uppercase;
+  color: $medium-text-color;
+}
+
+// Buttons
+.btn-primary {
+  margin-top: 3rem;
+  font-size: 2rem;
+  padding: 1rem 1.5rem;
+  font-family: "Teko", sans-serif;
+  font-weight: 600;
+  text-transform: uppercase;
+  color: $medium-text-color;
+  background-color: $medium-font-color;
+  border: solid 0.01rem $medium-text-color;
+  transition: ease-in-out all 0.5s;
+  cursor: pointer;
+}
+.btn-primary:hover {
+  background-color: $medium-text-color;
+  color: $medium-font-color;
+  box-shadow: 0.5rem 0.1rem 2rem 1rem $light-text-color;
+}
+.btn-primary:focus {
+  outline: none;
+  transform: scale(1);
+}
