--- a/sass/components/_sidebar.scss
+++ b/sass/components/_sidebar.scss
@@ -1,3 +1,5 @@
 .sidebar {
   background-color: yellow;
+  grid-column: sidebar-start / sidebar-end;
+  grid-row: 1 / -1; //start from 1 end as last
 }
