--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,9 @@ body {
   transform: scale(1); }
 
 .sidebar {
-  background-color: yellow;
+  background-color: #4f628e;
+  box-shadow: 0.1rem 0.1rem 1rem #7887ab;
+  z-index: 4;
   grid-column: sidebar-start / sidebar-end;
   grid-row: 1 / -1; }
 
@@ -161,7 +163,8 @@ body {
   color: #162955;
   background-color: #4f628e;
   display: grid;
-  grid-template-columns: repeat(2, 1fr); }
+  grid-template-columns: repeat(2, 1fr);
+  transition: ease-in-out 0.5s; }
   .car__img {
     width: 100%;
     grid-row: 1 /2;
@@ -204,10 +207,137 @@ body {
   .car__btn {
     grid-column: 1 / -1; }
 
+.car:hover {
+  transform: scale(1.1);
+  box-shadow: 0.5rem 0.1rem 2rem #7887ab; }
+
 .gallery {
-  background-color: #ca11ab;
-  grid-column: full-start / full-end; }
+  background-color: #061539;
+  grid-column: full-start / full-end;
+  display: grid;
+  grid-template-columns: repeat(8, 1fr);
+  grid-template-rows: repeat(7, 5vw);
+  grid-gap: 1.5rem;
+  padding: 1.5rem; }
+  .gallery__item--1 {
+    grid-row: 1 / span 2;
+    grid-column: 1 / span 2; }
+  .gallery__item--2 {
+    grid-row: 1 / span 2;
+    grid-column: 3 / span 2; }
+  .gallery__item--3 {
+    grid-row: 1 / span 3;
+    grid-column: 5 / span 3; }
+  .gallery__item--4 {
+    grid-row: 6 / span 2;
+    grid-column: 5 / span 2; }
+  .gallery__item--5 {
+    grid-row: 3 / span 2;
+    grid-column: 1 / span 2; }
+  .gallery__item--6 {
+    grid-row: 6 / span 2;
+    grid-column: 7 / span 2; }
+  .gallery__item--8 {
+    grid-row: 5 / span 3;
+    grid-column: 1 / span 2; }
+  .gallery__item--10 {
+    grid-row: 4 / span 2;
+    grid-column: 5 / span 2; }
+  .gallery__item--11 {
+    grid-row: 1 / span 1;
+    grid-column: 8 / span 1; }
+  .gallery__item--12 {
+    grid-row: 4 / span 2;
+    grid-column: 7 / span 2; }
+  .gallery__item--14 {
+    grid-row: 3 / span 5;
+    grid-column: 3 / span 2; }
+  .gallery__img {
+    width: 100%;
+    height: 100%;
+    display: block;
+    object-fit: cover;
+    transition: ease-in-out 0.5s; }
+  .gallery__img:hover {
+    transform: scale(1.1);
+    cursor: pointer;
+    z-index: 2;
+    box-shadow: 0.5rem 0.1rem 2rem #7887ab; }
 
 .footer {
-  background-color: rgba(51, 221, 221, 0.63);
-  grid-column: full-start / full-end; }
+  background-color: #162955;
+  grid-column: full-start / full-end;
+  padding: 8rem; }
+  .footer__legal {
+    font-size: 1.5rem;
+    text-align: center; }
+
+.nav {
+  display: grid;
+  justify-content: center;
+  grid-template-columns: repeat(auto-fit, 15rem);
+  grid-gap: 3rem;
+  justify-items: center; }
+  .nav__item {
+    list-style: none;
+    margin: 4rem 0; }
+  .nav__link {
+    text-decoration: none;
+    color: #7887ab;
+    background-color: #061539;
+    font-size: 2rem;
+    padding: 1rem 3rem;
+    cursor: pointer;
+    display: block;
+    transition: 0.5s all; }
+  .nav__link:hover {
+    transform: scale(1.1) translateY(-0.5rem);
+    outline: none; }
+
+.modal {
+  display: none;
+  position: fixed;
+  padding-top: 5rem;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background: rgba(22, 41, 85, 0.6);
+  backdrop-filter: blur(10px);
+  z-index: 99;
+  -webkit-animation-name: zoom;
+  -webkit-animation-duration: 0.3s;
+  animation-name: zoom;
+  animation-duration: 0.3s; }
+  .modal__image--container {
+    margin: 0 auto;
+    width: 70%;
+    max-width: 56.1rem;
+    position: relative; }
+  .modal__content {
+    width: 100%;
+    display: block; }
+  .modal__close {
+    position: absolute;
+    color: #7887ab;
+    font-size: 5.5rem;
+    font-weight: bold;
+    transition: 0.3s;
+    padding-left: 2rem;
+    cursor: pointer; }
+  .modal__close:hover {
+    color: red;
+    transform: scale(1.1); }
+
+@-webkit-keyframes zoom {
+  from {
+    -webkit-transform: scale(0); }
+  to {
+    -webkit-transform: scale(1); } }
+
+@keyframes zoom {
+  from {
+    transform: scale(0); }
+  to {
+    transform: scale(1); } }
