--- a/sass/components/_gallery.scss
+++ b/sass/components/_gallery.scss
@@ -1,4 +1,72 @@
 .gallery {
-  background-color: rgb(202, 17, 171);
+  background-color: $dark-font-color;
   grid-column: full-start / full-end;
+  display: grid;
+  grid-template-columns: repeat(8, 1fr);
+  grid-template-rows: repeat(7, 5vw);
+  grid-gap: 1.5rem;
+  padding: 1.5rem;
+
+  &__item {
+    &--1 {
+      grid-row: 1 / span 2;
+      grid-column: 1 / span 2;
+    }
+    &--2 {
+      grid-row: 1 / span 2;
+      grid-column: 3 / span 2;
+    }
+    &--3 {
+      grid-row: 1 / span 3;
+      grid-column: 5 / span 3;
+    }
+    &--4 {
+      grid-row: 6 / span 2;
+      grid-column: 5 / span 2;
+    }
+    &--5 {
+      grid-row: 3 / span 2;
+      grid-column: 1 / span 2;
+    }
+    &--6 {
+      grid-row: 6 / span 2;
+      grid-column: 7 / span 2;
+    }
+
+    &--8 {
+      grid-row: 5 / span 3;
+      grid-column: 1 / span 2;
+    }
+    &--10 {
+      grid-row: 4 / span 2;
+      grid-column: 5 / span 2;
+    }
+    &--11 {
+      grid-row: 1 / span 1;
+      grid-column: 8 / span 1;
+    }
+    &--12 {
+      grid-row: 4 / span 2;
+      grid-column: 7 / span 2;
+    }
+    &--14 {
+      grid-row: 3 / span 5;
+      grid-column: 3 / span 2;
+    }
+  }
+
+  &__img {
+    width: 100%;
+    height: 100%;
+    display: block;
+    //important for overflow
+    object-fit: cover;
+    transition: ease-in-out 0.5s;
+  }
+  &__img:hover {
+    transform: scale(1.1);
+    cursor: pointer;
+    z-index: 2;
+    box-shadow: 0.5rem 0.1rem 2rem $light-text-color;
+  }
 }
